# dit-ti-leerdoel-zoeker

./: db.py  gemini.py  leerdoelen.csv  leerresultaat_mapping.csv  nieuwe_leerdoelen.csv  pyproject.toml  requirements.txt  streamlit_app.py
chroma_gemini_db/: chroma.sqlite3
