[project]
name = "dit-ti-leerdoel-zoeker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.8",
    "google>=3.0.0",
    "google-api-core>=2.24.2",
    "google-genai>=1.14.0",
    "pandas>=2.2.3",
    "streamlit>=1.45.0",
]
